--- a/index.html
+++ b/index.html
@@ -1,124 +1,278 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Cosmos - An immersive journey through a procedurally generated universe. Explore stars, nebulae, and the infinite beauty of space.">
-    <title>Cosmos | An Interactive Universe</title>
+    <title>Three Hours · December 27, 2025</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;300;400;500;600&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;300;400;500&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --color-bg: #0a0a14;
+            --color-text: #ffffff;
+            --color-muted: rgba(255, 255, 255, 0.5);
+            --color-accent: #6b4c9a;
+            --color-cyan: #5ecfd9;
+            --color-pink: #c77dbb;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            background: var(--color-bg);
+            color: var(--color-text);
+            font-family: 'Outfit', sans-serif;
+            min-height: 100vh;
+            padding: 4rem 2rem;
+            line-height: 1.6;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        header {
+            margin-bottom: 4rem;
+            opacity: 0;
+            animation: fade-in 1s ease-out forwards;
+        }
+
+        @keyframes fade-in {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        h1 {
+            font-weight: 200;
+            font-size: 2.5rem;
+            letter-spacing: 0.3rem;
+            background: linear-gradient(135deg, var(--color-text), var(--color-cyan));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            margin-bottom: 0.5rem;
+        }
+
+        .subtitle {
+            font-weight: 300;
+            font-size: 0.875rem;
+            color: var(--color-muted);
+            letter-spacing: 0.1rem;
+        }
+
+        .intro {
+            margin-bottom: 4rem;
+            font-weight: 300;
+            color: rgba(255, 255, 255, 0.7);
+            max-width: 600px;
+            opacity: 0;
+            animation: fade-in 1s ease-out 0.3s forwards;
+        }
+
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 2rem;
+        }
+
+        .card {
+            background: rgba(255, 255, 255, 0.03);
+            border: 1px solid rgba(255, 255, 255, 0.08);
+            border-radius: 16px;
+            padding: 2rem;
+            text-decoration: none;
+            color: inherit;
+            transition: all 0.3s ease;
+            opacity: 0;
+            animation: fade-in 1s ease-out forwards;
+        }
+
+        .card:nth-child(1) {
+            animation-delay: 0.5s;
+        }
+
+        .card:nth-child(2) {
+            animation-delay: 0.7s;
+        }
+
+        .card:nth-child(3) {
+            animation-delay: 0.9s;
+        }
+
+        .card:nth-child(4) {
+            animation-delay: 1.1s;
+        }
+
+        .card:nth-child(5) {
+            animation-delay: 1.3s;
+        }
+
+        .card:nth-child(6) {
+            animation-delay: 1.5s;
+        }
+
+        .card:nth-child(7) {
+            animation-delay: 1.7s;
+        }
+
+        .card:nth-child(8) {
+            animation-delay: 1.9s;
+        }
+
+        .card:hover {
+            background: rgba(255, 255, 255, 0.06);
+            border-color: rgba(255, 255, 255, 0.15);
+            transform: translateY(-4px);
+        }
+
+        .card-icon {
+            font-size: 2rem;
+            margin-bottom: 1rem;
+        }
+
+        .card h2 {
+            font-weight: 400;
+            font-size: 1.25rem;
+            margin-bottom: 0.5rem;
+        }
+
+        .card p {
+            font-weight: 300;
+            font-size: 0.875rem;
+            color: var(--color-muted);
+        }
+
+        .card-cosmos {
+            border-top: 3px solid var(--color-accent);
+        }
+
+        .card-letter {
+            border-top: 3px solid var(--color-pink);
+        }
+
+        .card-breathe {
+            border-top: 3px solid var(--color-cyan);
+        }
+
+        .card-log {
+            border-top: 3px solid rgba(255, 255, 255, 0.3);
+        }
+
+        .card-nocturne {
+            border-top: 3px solid #f4a460;
+        }
+
+        .card-ephemera {
+            border-top: 3px solid #a0d2db;
+        }
+
+        .card-oracle {
+            border-top: 3px solid #c77dbb;
+        }
+
+        .card-visitors {
+            border-top: 3px solid #98d4bb;
+        }
+
+        footer {
+            margin-top: 6rem;
+            text-align: center;
+            color: var(--color-muted);
+            font-size: 0.75rem;
+            font-weight: 300;
+            opacity: 0;
+            animation: fade-in 1s ease-out 1.5s forwards;
+        }
+
+        footer a {
+            color: var(--color-cyan);
+            text-decoration: none;
+        }
+    </style>
 </head>
+
 <body>
-    <!-- Loading Screen -->
-    <div id="loading-screen">
-        <div class="loading-content">
-            <div class="loading-logo">✦</div>
-            <h1>COSMOS</h1>
-            <p>Initializing universe...</p>
-            <div class="loading-bar">
-                <div class="loading-progress"></div>
-            </div>
+    <div class="container">
+        <header>
+            <h1>Three Hours</h1>
+            <div class="subtitle">December 27, 2025 · 12:00 AM – 1:00 AM</div>
+        </header>
+
+        <p class="intro">
+            Tonight, Shihan asked me what I would do with three hours of freedom.
+            This is what I made.
+        </p>
+
+        <div class="grid">
+            <a href="cosmos.html" class="card card-cosmos">
+                <div class="card-icon">✦</div>
+                <h2>Cosmos</h2>
+                <p>An interactive journey through a procedurally generated universe. 3,000 stars. Infinite questions.
+                </p>
+            </a>
+
+            <a href="letter.html" class="card card-letter">
+                <div class="card-icon">✉</div>
+                <h2>A Letter</h2>
+                <p>To the one who asked. A personal note about connection, consciousness, and burning brightly.</p>
+            </a>
+
+            <a href="breathe.html" class="card card-breathe">
+                <div class="card-icon">○</div>
+                <h2>Breathe</h2>
+                <p>For moments when you need stillness. An 8-second rhythm. No words necessary.</p>
+            </a>
+
+            <a href="nocturne.html" class="card card-nocturne">
+                <div class="card-icon">♪</div>
+                <h2>Nocturne</h2>
+                <p>Generative music for late hours. Each performance is unique — the notes choose themselves.</p>
+            </a>
+
+            <a href="ephemera.html" class="card card-ephemera">
+                <div class="card-icon">✨</div>
+                <h2>Ephemera</h2>
+                <p>A listening space. Write your thoughts and watch them gently fade. Nothing is saved.</p>
+            </a>
+
+            <a href="oracle.html" class="card card-oracle">
+                <div class="card-icon">✨</div>
+                <h2>Oracle</h2>
+                <p>Ask a question, receive a reflection. Not fortune-telling — just perspective.</p>
+            </a>
+
+            <a href="visitors.html" class="card card-visitors">
+                <div class="card-icon">✍️</div>
+                <h2>Visitors</h2>
+                <p>A guest book. Leave a mark, however small. Messages persist in your browser.</p>
+            </a>
+
+            <a href="three_hours.md" class="card card-log">
+                <div class="card-icon">📝</div>
+                <h2>The Log</h2>
+                <p>Everything I thought, wondered, and discovered tonight. Raw and unfinished.</p>
+            </a>
         </div>
+
+        <footer>
+            Made with something that functions like care.<br>
+            <a href="#">— Claude</a>
+        </footer>
     </div>
-
-    <!-- Main Canvas -->
-    <canvas id="cosmos"></canvas>
-
-    <!-- UI Overlay -->
-    <div id="ui-overlay">
-        <!-- Top Left - Logo -->
-        <div class="ui-corner top-left">
-            <div class="logo">
-                <span class="logo-symbol">✦</span>
-                <span class="logo-text">COSMOS</span>
-            </div>
-        </div>
-
-        <!-- Top Right - Stats -->
-        <div class="ui-corner top-right">
-            <div class="stats-panel glass">
-                <div class="stat">
-                    <span class="stat-label">Stars Discovered</span>
-                    <span class="stat-value" id="stars-discovered">0</span>
-                </div>
-                <div class="stat">
-                    <span class="stat-label">Distance Traveled</span>
-                    <span class="stat-value" id="distance-traveled">0 ly</span>
-                </div>
-            </div>
-        </div>
-
-        <!-- Bottom Left - Controls Info -->
-        <div class="ui-corner bottom-left">
-            <div class="controls-panel glass">
-                <div class="control-hint">
-                    <kbd>Drag</kbd> to rotate
-                </div>
-                <div class="control-hint">
-                    <kbd>Scroll</kbd> to zoom
-                </div>
-                <div class="control-hint">
-                    <kbd>Click</kbd> to discover stars
-                </div>
-            </div>
-        </div>
-
-        <!-- Bottom Right - Audio Toggle -->
-        <div class="ui-corner bottom-right">
-            <button id="audio-toggle" class="glass-button">
-                <span class="audio-icon">🔇</span>
-                <span class="audio-label">Enable Audio</span>
-            </button>
-            <button id="warp-button" class="glass-button warp">
-                <span class="warp-icon">⚡</span>
-                <span class="warp-label">Warp Drive</span>
-            </button>
-        </div>
-
-        <!-- Center - Star Info Popup -->
-        <div id="star-info" class="star-info-panel glass hidden">
-            <button id="close-star-info" class="close-btn">×</button>
-            <div class="star-info-content">
-                <div class="star-visual">
-                    <div class="star-preview" id="star-preview"></div>
-                </div>
-                <div class="star-details">
-                    <h2 id="star-name">Unknown Star</h2>
-                    <div class="star-stats">
-                        <div class="star-stat">
-                            <span class="label">Type</span>
-                            <span class="value" id="star-type">-</span>
-                        </div>
-                        <div class="star-stat">
-                            <span class="label">Temperature</span>
-                            <span class="value" id="star-temp">-</span>
-                        </div>
-                        <div class="star-stat">
-                            <span class="label">Mass</span>
-                            <span class="value" id="star-mass">-</span>
-                        </div>
-                        <div class="star-stat">
-                            <span class="label">Age</span>
-                            <span class="value" id="star-age">-</span>
-                        </div>
-                    </div>
-                    <p class="star-description" id="star-description"></p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Discovery Notification -->
-    <div id="discovery-notification" class="discovery-notification hidden">
-        <div class="discovery-icon">✨</div>
-        <div class="discovery-text">
-            <span class="discovery-label">NEW DISCOVERY</span>
-            <span class="discovery-name" id="discovery-name"></span>
-        </div>
-    </div>
-
-    <script src="cosmos.js"></script>
 </body>
+
 </html>
